--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,3 +23,8 @@
 		<%= flash.error %>
 	</div>
 		<% } %>
+		<% if (locals.flash && locals.flash.success) { %>
+	<div class="ui positive message ">
+		<%= flash.success %>
+	</div>
+		<% } %>
